[package]
name = "longan-nano-examples"
version = "0.1.0"
authors = ["9names <60134748+9names@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
longan-nano = { git = "https://github.com/riscv-rust/longan-nano.git", rev = "34c172a720467bc14a1fbef89e1135003a3166e7", features = ["lcd"]}
riscv = "0.5.6"
riscv-rt = "0.6.1"
panic-halt = "0.2.0"
gd32vf103xx-hal = "0.3.0"
bare-metal = "0.2.4"
embedded-hal = "0.2.3"
embedded-graphics = "0.6.2"

